Puntero_Funcion/.metadata/.plugins/org.eclipse.cdt.ui/pruebaParaElExmen.build.log
17:40:18 **** Incremental Build of configuration Debug for project pruebaParaElExmen ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pruebaParaElExmen.o" "..\\src\\pruebaParaElExmen.c" 
..\src\pruebaParaElExmen.c: In function 'main':
..\src\pruebaParaElExmen.c:25:9: error: 'EXIT_SUCCESS' undeclared (first use in this function)
   25 |  return EXIT_SUCCESS;
      |         ^~~~~~~~~~~~
..\src\pruebaParaElExmen.c:25:9: note: each undeclared identifier is reported only once for each function it appears in
..\src\pruebaParaElExmen.c:18:5: warning: unused variable 'num' [-Wunused-variable]
   18 | int num = 1;
      |     ^~~

17:40:19 Build Failed. 1 errors, 1 warnings. (took 189ms)

